--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -81,9 +81,8 @@
                             <Label Text="常规"
                                FontAttributes="Bold"/>
 
-                            <JiuLing:TextSwitch Text="启动时检查更新（暂不可用）"
-                                            IsEnabled="False"
-                                            IsToggled="False"/>
+                            <JiuLing:TextSwitch Text="启动时检查更新"
+                                                IsToggled="{Binding IsAutoCheckUpdate}"/>
 
                             <JiuLing:TextSwitch Text="深色主题（可能需要重启）"
                                             IsToggled="{Binding IsDarkMode}"/>
