--- a/src/ListenTogether/Pages/DesktopShell.xaml
+++ b/src/ListenTogether/Pages/DesktopShell.xaml
@@ -32,10 +32,10 @@
         </StackLayout>
     </Shell.FlyoutHeader>
 
-    <FlyoutItem Title="{Binding Search.Title}"
+    <FlyoutItem Title="{Binding SearchResult.Title}"
                 Icon="{AppThemeBinding Light=search.png, Dark=search_dark.png}">
         <Tab>
-            <ShellContent  ContentTemplate="{DataTemplate pages:SearchPage}" />
+            <ShellContent  ContentTemplate="{DataTemplate pages:SearchResultPage}" />
         </Tab>
     </FlyoutItem>
 
