1、服务器地址的设置由配置文件改为程序设置

--- a/src/ListenTogether/App.xaml
+++ b/src/ListenTogether/App.xaml
@@ -11,6 +11,7 @@
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
             <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
             <toolkit:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
+            <toolkit:IsStringNullOrWhiteSpaceConverter x:Key="IsStringNullOrWhiteSpaceConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
