--- a/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
+++ b/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
@@ -13,11 +13,11 @@
     <Color x:Key="LightTextSecond">#717171</Color>
     <Color x:Key="LightPlaceholder">#767676</Color>
     <Color x:Key="LightActivity">#0366D6</Color>
-    <Color x:Key="LightLyricText">#646464</Color>
-    <Color x:Key="LightLyricHighlight">#D892FF</Color>
-    <Color x:Key="LightPlayingBackground">#242424</Color>
+    <Color x:Key="LightLyricText">#CDCBC6</Color>
+    <Color x:Key="LightLyricHighlight">#101010</Color>
+    <Color x:Key="LightPlayingBackground">#F7F7F7</Color>
     <Color x:Key="LightBorder">#BEBEBE</Color>
-    <Color x:Key="LightBtnBackground">#FDFDFD</Color>
+    <Color x:Key="LightBtnBackground">#D7ABFF</Color>
     <Color x:Key="LightBtnText">#000000</Color>
     <Color x:Key="LightFeeText">#D892FF</Color>
     <Color x:Key="LightLink">#0366D6</Color>
@@ -38,11 +38,11 @@
     <Color x:Key="DarkTextSecond">#9D9D9D</Color>
     <Color x:Key="DarkPlaceholder">#929292</Color>
     <Color x:Key="DarkActivity">#2F88ED</Color>
-    <Color x:Key="DarkLyricText">#6B6B6B</Color>
+    <Color x:Key="DarkLyricText">#BAB7B2</Color>
     <Color x:Key="DarkLyricHighlight">#EFEFEF</Color>
-    <Color x:Key="DarkPlayingBackground">#242424</Color>
+    <Color x:Key="DarkPlayingBackground">#605E5C</Color>
     <Color x:Key="DarkBorder">#7B7B7B</Color>
-    <Color x:Key="DarkBtnBackground">#2F363D</Color>
+    <Color x:Key="DarkBtnBackground">#A180BF</Color>
     <Color x:Key="DarkBtnText">#FFFFFF</Color>
     <Color x:Key="DarkFeeText">#D892FF</Color>
     <Color x:Key="DarkLink">#2F88ED</Color>
