--- a/src/ListenTogether/Pages/RegisterPage.xaml
+++ b/src/ListenTogether/Pages/RegisterPage.xaml
@@ -23,19 +23,23 @@
 
         <StackLayout>
             <Entry Text="{Binding Username}"
-                       Placeholder="请输入用户名"
-                       Margin="0,10,0,10"/>
+                   Placeholder="请输入用户名"
+                   ReturnType="Next"
+                   Margin="0,10,0,10"/>
             <Entry Text="{Binding Nickname}"
-                       Placeholder="请输入昵称" 
-                       Margin="0,0,0,10"/>
+                   Placeholder="请输入昵称"
+                   ReturnType="Next"
+                   Margin="0,0,0,10"/>
             <Entry Text="{Binding Password}"
-                       Placeholder="密码"
-                       IsPassword="True"
-                       Margin="0,0,0,10"/>
+                   Placeholder="密码"
+                   ReturnType="Next"
+                   IsPassword="True"
+                   Margin="0,0,0,10"/>
             <Entry Text="{Binding Password2}"
-                       Placeholder="确认密码"
-                       IsPassword="True"
-                       Margin="0,0,0,10"/>
+                   Placeholder="确认密码"
+                   ReturnType="Next"
+                   IsPassword="True"
+                   Margin="0,0,0,10"/>
             <HorizontalStackLayout Margin="0,0,0,10">
                 <Label Text="头像"
                    VerticalTextAlignment="Center"
@@ -51,7 +55,7 @@
             </HorizontalStackLayout>
 
             <Label Text="{Binding ApiMessage}"
-               Margin="0,10,0,0"/>
+                   Margin="0,10,0,0"/>
 
             <Button Text="注册"
                     Margin="0,20,0,0"
