--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -35,102 +35,103 @@
         </Style>
     </ContentPage.Resources>
 
-    <AbsoluteLayout  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-        <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" 
-                     AbsoluteLayout.LayoutFlags="All" 
-                     BackgroundColor="{AppThemeBinding Dark={StaticResource DarkPlayingBackground},Light={StaticResource LightPlayingBackground}}">
-            <JiuLing:GaussianImage Url="{Binding CurrentMusic.ImageUrl}"
-                                        Opacity="0.7"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand"/>
-        </StackLayout>
+    <Grid>
+        <JiuLing:GaussianImage Url="{Binding CurrentMusic.ImageUrl}"
+                               BackgroundColor="#000"
+                               Opacity="0.6"
+                               HorizontalOptions="FillAndExpand"
+                               VerticalOptions="FillAndExpand"/>
 
-        <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" 
-                     >
-            <StackLayout VerticalOptions="FillAndExpand"
-                         Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
-                <StackLayout Margin="0,0,0,20"
-                     Orientation="Horizontal"
-                     VerticalOptions="Start">
-                    <Label Text="正在播放"
-                   VerticalTextAlignment="Center"
-                   Style="{StaticResource Title}"/>
+        <StackLayout VerticalOptions="FillAndExpand"
+                     Margin="{OnIdiom Desktop='0,80,0,0',Tablet='0,80,0,0',Phone='0,10,0,0'}">
+            <StackLayout VerticalOptions="StartAndExpand"
+                         Orientation="{OnIdiom Desktop=Horizontal,Tablet=Horizontal}"
+                         WidthRequest="600"
+                         HeightRequest="{OnIdiom Desktop=400,Tablet=400,Phone=580}">
+                <StackLayout HorizontalOptions="CenterAndExpand">
+                    <Image Source="{Binding CurrentMusic.ImageUrl}"
+                           HorizontalOptions="Center"
+                           Aspect="AspectFit"
+                           MaximumHeightRequest="250"
+                           WidthRequest="{OnIdiom Desktop=250,Tablet=250,Phone=350}"/>
                 </StackLayout>
 
-                <Label Text="当前未播放歌曲"
-               HorizontalTextAlignment="Center"
-               IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
+                <StackLayout Margin="{OnIdiom Desktop='0',Tablet='0',Phone='0,30,0,0'}"
+                             VerticalOptions="FillAndExpand"
+                             HorizontalOptions="CenterAndExpand">
+                    <Label Text="当前未播放歌曲"
+                           HorizontalTextAlignment="Center"
+                           IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
 
-                <StackLayout VerticalOptions="FillAndExpand"
-                     IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}">
+                    <StackLayout VerticalOptions="FillAndExpand"
+                                 IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}"> 
 
-                    <!--<StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" BackgroundColor="#000000">
-                    <services:BlurredImage Opacity="0.3" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Aspect="Fill" Source="{Binding CurrentMusic.ImageUrl}"/>
-                </StackLayout>-->
+                        <StackLayout Orientation="Horizontal"
+                                     HorizontalOptions="CenterAndExpand">
 
-                    <StackLayout Orientation="Horizontal"
-                         HorizontalOptions="CenterAndExpand">
+                            <Border Padding="4,0,4,0"
+                                    StrokeThickness="1"
+                                    VerticalOptions="Center"
+                                    HorizontalOptions="Center">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="5" />
+                                </Border.StrokeShape>
+                                <Label Text="{Binding CurrentMusic.PlatformName}"
+                                       FontSize="16"
+                                       Style="{StaticResource Explain}"/>
+                            </Border>
 
-                        <Border Padding="4,0,4,0"
-                        StrokeThickness="1"
-                        HorizontalOptions="Center">
-                            <Border.StrokeShape>
-                                <RoundRectangle CornerRadius="5" />
-                            </Border.StrokeShape>
-                            <Label Text="{Binding CurrentMusic.PlatformName}"
-                           FontSize="16"
-                           Style="{StaticResource Explain}"/>
-                        </Border>
+                            <Label Margin="10,0,0,0"
+                                   Text="{Binding CurrentMusic.Name}"
+                                   TextColor="{AppThemeBinding Light={StaticResource LightText}, Dark={StaticResource DarkText}}"
+                                   FontSize="22"
+                                   VerticalOptions="Center"
+                                   HorizontalTextAlignment="Center"/>
+                        </StackLayout>
 
-                        <Label Margin="10,0,0,0"
-                       Text="{Binding CurrentMusic.Name}"
-                       TextColor="{AppThemeBinding Light={StaticResource LightText}, Dark={StaticResource DarkText}}"
-                       FontSize="22"
-                       HorizontalTextAlignment="Center"/>
-                    </StackLayout>
+                        <StackLayout VerticalOptions="Start"
+                                     Margin="0,10,0,20">
+                            <Label TextColor="{AppThemeBinding Light={StaticResource LightTextSecond}, Dark={StaticResource DarkTextSecond}}"
+                                   FontSize="16"
+                                   HorizontalTextAlignment="Center">
+                                <MultiBinding StringFormat="{}{0} - {1}">
+                                    <Binding Path="CurrentMusic.Artist" />
+                                    <Binding Path="CurrentMusic.Album" />
+                                </MultiBinding>
+                            </Label>
 
-                    <StackLayout VerticalOptions="Start"
-                         Margin="0,10,0,20">
-                        <Label TextColor="{AppThemeBinding Light={StaticResource LightTextSecond}, Dark={StaticResource DarkTextSecond}}"
-                       FontSize="16"
-                       HorizontalTextAlignment="Center">
-                            <MultiBinding StringFormat="{}{0} - {1}">
-                                <Binding Path="CurrentMusic.Artist" />
-                                <Binding Path="CurrentMusic.Album" />
-                            </MultiBinding>
-                        </Label>
+                        </StackLayout>
 
-                    </StackLayout>
-
-                    <!-- 歌词 -->
-                    <CollectionView VerticalOptions="FillAndExpand"
-                                    x:Name="ListLyrics"
-                                    EmptyView="暂无歌词"
-                                    ItemsSource="{Binding Lyrics}"
-                                    HorizontalOptions="Center"
-                                    SelectionMode="None">
-                        <CollectionView.Behaviors>
-                            <toolkit:EventToCommandBehavior EventName="Scrolled"
+                        <!-- 歌词 -->
+                        <CollectionView VerticalOptions="FillAndExpand"
+                                        x:Name="ListLyrics"
+                                        EmptyView="暂无歌词"
+                                        ItemsSource="{Binding Lyrics}"
+                                        HorizontalOptions="Center"
+                                        SelectionMode="None">
+                            <CollectionView.Behaviors>
+                                <toolkit:EventToCommandBehavior EventName="Scrolled"
                                                         Command="{Binding LyricsScrolledCommand}"/>
 
-                        </CollectionView.Behaviors>
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                <StackLayout HorizontalOptions="Center">
-                                    <Label Text="{Binding Info}" 
-                                           Style="{StaticResource LyricItem}"/>
-                                </StackLayout>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+                            </CollectionView.Behaviors>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout HorizontalOptions="Center"
+                                                 HeightRequest="30">
+                                        <Label Text="{Binding Info}" 
+                                               Style="{StaticResource LyricItem}"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
                 </StackLayout>
             </StackLayout>
-
             <StackLayout VerticalOptions="End">
                 <controls:Player x:Name="player"
                              IsMiniWhenPhone="False"/>
             </StackLayout>
         </StackLayout>
 
-    </AbsoluteLayout>
+    </Grid>
 </ContentPage>
