--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -43,20 +43,28 @@
                                VerticalOptions="FillAndExpand"/>
 
         <StackLayout VerticalOptions="FillAndExpand"
-                     Margin="{OnIdiom Desktop='0,80,0,0',Tablet='0,80,0,0',Phone='0,10,0,0'}">
+                     Margin="{OnPlatform WinUI='0,80,0,0',Android='0,10,0,0',iOS='0,10,0,0'}">
             <StackLayout VerticalOptions="StartAndExpand"
-                         Orientation="{OnIdiom Desktop=Horizontal,Tablet=Horizontal}"
+                         Orientation="{OnPlatform WinUI=Horizontal}"
                          WidthRequest="600"
-                         HeightRequest="{OnIdiom Desktop=400,Tablet=400,Phone=580}">
+                         HeightRequest="{OnPlatform WinUI=400,iOS=400,Android=580}">
                 <StackLayout HorizontalOptions="CenterAndExpand">
                     <Image Source="{Binding CurrentMusic.ImageUrl}"
                            HorizontalOptions="Center"
                            Aspect="AspectFit"
                            MaximumHeightRequest="250"
-                           WidthRequest="{OnIdiom Desktop=250,Tablet=250,Phone=350}"/>
+                           WidthRequest="{OnPlatform WinUI=250,Android=350,iOS=350}"/>
+
+                    <Label Margin="0,10,0,0"
+                           HorizontalOptions="Center"
+                           Text="复制歌曲链接">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding CopyMusicLinkCommand}"/>
+                        </Label.GestureRecognizers>
+                    </Label>
                 </StackLayout>
 
-                <StackLayout Margin="{OnIdiom Desktop='0',Tablet='0',Phone='0,30,0,0'}"
+                <StackLayout Margin="{OnPlatform WinUI='0',Android='0,30,0,0',iOS='0,30,0,0'}"
                              VerticalOptions="FillAndExpand"
                              HorizontalOptions="CenterAndExpand">
                     <Label Text="当前未播放歌曲"
@@ -64,7 +72,7 @@
                            IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
 
                     <StackLayout VerticalOptions="FillAndExpand"
-                                 IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}"> 
+                                 IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}">
 
                         <StackLayout Orientation="Horizontal"
                                      HorizontalOptions="CenterAndExpand">
@@ -111,14 +119,15 @@
                                         SelectionMode="None">
                             <CollectionView.Behaviors>
                                 <toolkit:EventToCommandBehavior EventName="Scrolled"
-                                                        Command="{Binding LyricsScrolledCommand}"/>
+                                                                Command="{Binding LyricsScrolledCommand}"/>
 
                             </CollectionView.Behaviors>
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
                                     <StackLayout HorizontalOptions="Center"
-                                                 HeightRequest="30">
-                                        <Label Text="{Binding Info}" 
+                                                 VerticalOptions="Center"
+                                                 HeightRequest="{OnPlatform WinUI=40,Android=30,iOS=30}">
+                                        <Label Text="{Binding Info}"
                                                Style="{StaticResource LyricItem}"/>
                                     </StackLayout>
                                 </DataTemplate>
